# VWisper3

./: index.html  package.json  settings.html  vite.config.ts
scripts/: create_dmg.sh
src/: AudioPill.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: dashboard.json  default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  history.rs  lib.rs  main.rs  settings.rs  textinjection.rs  transcription.rs  tray.rs  update.rs
src-tauri/src/platform/: macos.rs  windows.rs
src/UI/: AudioPill.tsx  Settings.tsx
src/app/audio-pill/: page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/settings/: page.tsx
src/components/: UpdateChecker.tsx  VoiceVisualizer.tsx  cards.tsx  chart.tsx  sheader.tsx
src/components/AudioPill/: VoiceVisualizer.tsx
src/components/dashboard/: chart.tsx  sidebar.tsx  table.tsx
src/hooks/: use-update.ts
src/lib/: AudioPillState.tsx  sound.ts  theme-provider.tsx
