[package]
name = "vwisper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vwisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
serde_json = "1.0"
windows = { version = "0.56", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
] }
device_query = "1.1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
rdev = "0.5.3"
cpal = "0.15"
hound = "3.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
enigo = "0.1"
arboard = "3.3"
uuid = { version = "1.17.0", features = ["v4"] }
base64 = "0.22.1"

